# AMCS-Core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gqt.sh
.cache/clangd/index/: AMCSCore.h.810F1D6631C33C90.idx  AccountManager.cpp.BEB80EAF176C782A.idx  AccountManager.h.96EE7EE6A8E9AAFC.idx  AsulMultiDownloader.cpp.EEA7DC036DCEE9F5.idx  AsulMultiDownloader.h.14891F00A8205B51.idx  CoreSettings.cpp.F274437E6EF582D2.idx  CoreSettings.h.03C3825ECC9B036E.idx  Everything.h.05938F5FC999436A.idx  JavaManager.cpp.ED307B0C84AE0754.idx  JavaManager.h.63AB4ECA77C01906.idx  JavaSearcher.cpp.9BB5D6AA416F1FFE.idx  JavaSearcher.h.4CF1575C13E66D06.idx  JlCompress.cpp.221D3287301338AD.idx  JlCompress.h.79F7DB874453DC03.idx  LaunchOptions.h.E9F031142AFFEE0C.idx  LauncherCore.cpp.AA7BC55A249D3C4C.idx  LauncherCore.h.4513C9176CD43911.idx  LoaderInterfaces.h.A99226D66F8FDD3D.idx  McAccount.cpp.B166794BAA8DA082.idx  McAccount.h.C3F6137EDFD6F7E2.idx  McAccountManager.cpp.3F563879884BD96C.idx  McAccountManager.h.84F183C5446075D1.idx  McApi.cpp.B66F23D31BDB5E60.idx  McApi.h.3E98BC3950962FBF.idx  VersionManager.cpp.F44E3A26E55F566E.idx  VersionManager.h.2550461FD303A6BD.idx  adler32.c.16734AAA778F12D1.idx  blocksort.c.AD1650C6EF96EEF2.idx  bzlib.c.6A52A0612E441E00.idx  bzlib.h.5AA5A73222B36B51.idx  bzlib_private.h.31FF8B1688CDF8EB.idx  compress.c.9EEF8E21FF9CC62F.idx  compress.c.F0CC0CDB20A9BE43.idx  crc32.c.DB2D76CFECA152B3.idx  crc32.h.B140E33D7931C2CA.idx  crctable.c.D1421061EB4B9FCE.idx  decompress.c.C5E38C9FFFFAC94A.idx  deflate.c.906050AD486577EC.idx  deflate.h.146E7E6FB58DCA72.idx  example.c.D9B0260943EF52DB.idx  (+57 more)
.github/workflows/: ci.yml
Core/: AMCSCore.h  CoreSettings.cpp  CoreSettings.h
Core/Api/: McApi.cpp  McApi.h
Core/Auth/: McAccount.cpp  McAccount.h  McAccountManager.cpp  McAccountManager.h
Core/Common/: stdafx.h
Core/Download/: AsulMultiDownloader.cpp  AsulMultiDownloader.h
Core/Launcher/: LaunchOptions.h  LauncherCore.cpp  LauncherCore.h  LoaderInterfaces.h
Core/Manager/: AccountManager.cpp  AccountManager.h  JavaManager.cpp  JavaManager.h  VersionManager.cpp  VersionManager.h
Core/Searcher/: JavaSearcher.cpp  JavaSearcher.h
Data/: versions.json
Installer/: main.cpp
Test/: CMakeLists.txt  test_core_init.cpp  test_core_sanity.cpp  test_install_latest.cpp  test_install_with_save_name.cpp  test_java_searcher.cpp  test_launch_latest_microsoft.cpp  test_launch_latest_offline.cpp  test_launcher_sanity.cpp  test_login_device.cpp  test_manager_account.cpp  test_manager_version.cpp  test_manifest_fetch.cpp  test_mc_version_serialization.cpp  test_quazip_pack_unpack.cpp
